--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,167 @@
+body {
+    margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #eceef2;
+    color: #666666;
+    font-family: sans-serif;
+}
+
+input,
+select {
+    color: #666666;
+    font-family: sans-serif;
+}
+
+ul {
+    list-style-type: none;
+}
+
+/* Unvisited link */
+a,
+a:link,
+button {
+    background-color: #5f6eb9;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+button {
+    border: 0;
+    cursor: pointer;
+}
+
+/* Mouse over link */
+a:hover {
+    background-color: #444e84;
+}
+
+/* Selected link */
+a:active,
+a:visited {
+    color: white;
+}
+
+li {
+    margin: 5px 0;
+}
+
 .cursor-pointer {
     cursor: pointer;
+}
+
+label{
+    display:inline-block; 
+    width:100px;
+}
+
+hr {
+    background-color: gray;
+    border: 1px solid gray;
+}
+
+input[type=text],
+input[type=number],
+input[type=password],
+input[type=email],
+input[type=date],
+select,
+textarea {
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #666666;
+    font-size: 15px;
+}
+
+input[type=color] {
+    margin: 8px 0 8px 4px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=checkbox] {
+    margin: 20px 0;
+}
+
+input[type=submit] {
+    background-color: #246dec;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+input[type=submit]:hover {
+    background-color: #2061d0;
+}
+
+/* ---------- TABLE ---------- */
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 2px solid #ddd;
+    border-radius: 4px;
+}
+
+th,
+td {
+    text-align: left;
+    padding: 8px;
+    border: 2px solid #ddd;
+}
+
+.options {
+    text-align: center;
+}
+
+a.new-button {
+    background-color: #246dec;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+a.new-button:hover {
+    background-color: #2061d0;
+}
+
+/* ---------- SCROLLBARS ---------- */
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #a5aaad;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4f35a1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a5aaad;
 }
